add new website from server na

--- a/xem-phim-moi/anh-hung-ban-phim/index.html
+++ b/xem-phim-moi/anh-hung-ban-phim/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1761,21 +1761,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/your-friend-the-rat" title="Your Friend the Rat">
+          <a class="list-top-movie-link" href="/phim-moi/that-nghiep-chuyen-sinh-phan-2-part-2" title="Thất Nghiệp Chuyển Sinh (Phần 2) – Part 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/your-friend-the-rat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mushoku-tensei-jobless-reincarnation-season-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Your Friend the Rat
+             Thất Nghiệp Chuyển Sinh (Phần 2) – Part 2
             </span>
             <span class="list-top-movie-item-en">
-             Your Friend the Rat
+             Mushoku Tensei: Jobless Reincarnation Season 2 Cour 2
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1783,87 +1783,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-tu-kho-sai" title="Người Tù Khổ Sai">
+          <a class="list-top-movie-link" href="/phim-moi/tan-trang-su-tong-the-kiet" title="Tân Trạng Sư Tống Thế Kiệt">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-tu-kho-sai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-trang-su-tong-the-kiet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Tù Khổ Sai
+             Tân Trạng Sư Tống Thế Kiệt
             </span>
             <span class="list-top-movie-item-en">
-             Papillon
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tran-chien-sinh-tu" title="Trận Chiến Sinh Tử">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tran-chien-sinh-tu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trận Chiến Sinh Tử
-            </span>
-            <span class="list-top-movie-item-en">
-             Take Down - Billionaire Ransom
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/linh-ban-tia-quyet-chien-sinh-tu" title="Lính Bắn Tỉa: Quyết Chiến Sinh Tử">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-ban-tia-quyet-chien-sinh-tu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lính Bắn Tỉa: Quyết Chiến Sinh Tử
-            </span>
-            <span class="list-top-movie-item-en">
-             The Sniper (2020)
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-noi-cung" title="Cuộc Chiến Nội Cung">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-noi-cung-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc Chiến Nội Cung
-            </span>
-            <span class="list-top-movie-item-en">
-             Cruel Palace - War of Flowers
+             Justice My Foot
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bi-mat-cua-mua-he-phan-2" title="Bí mật của mùa hè (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-mat-cua-mua-he-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bí mật của mùa hè (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Secrets of Summer (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ong-thay-vi-dieu" title="Ông thầy vi diệu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-thay-vi-dieu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ông thầy vi diệu
+            </span>
+            <span class="list-top-movie-item-en">
+             Akashic Record of Bastard Magic Instructor
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-chang-co-may-nguoi-ban-phan-2" title="Tôi chẳng có mấy người bạn (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-chang-co-may-nguoi-ban-phan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tôi chẳng có mấy người bạn (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Haganai (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
