add new website from server na

--- a/xem-phim-moi/canh-bao-dap-tra/index.html
+++ b/xem-phim-moi/canh-bao-dap-tra/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1756,7 +1756,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1777,18 +1777,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/oan-hon-ma-nu" title="Oan Hồn Ma Nữ">
+          <a class="list-top-movie-link" href="/phim-moi/uoc-gi-duoc-nay" title="Ước Gì Được Nấy">
            <span class="status">
-            HD Thuyết Minh
+            HD VietSub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oan-hon-ma-nu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/uoc-gi-duoc-nay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Oan Hồn Ma Nữ
+             Ước Gì Được Nấy
             </span>
             <span class="list-top-movie-item-en">
-             Sang Nang Prai
+             Switch
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1799,62 +1799,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/breach" title="Breach">
+          <a class="list-top-movie-link" href="/phim-moi/vu-tru-hoat-dong-nhu-the-nao-phan-5" title="Vũ trụ hoạt động như thế nào (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/breach-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-tru-hoat-dong-nhu-the-nao-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Breach
+             Vũ trụ hoạt động như thế nào (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Breach
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yen-nghi" title="Yên Nghỉ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yen-nghi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Yên Nghỉ
-            </span>
-            <span class="list-top-movie-item-en">
-             Rest in Peace
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-parasite-doctor-suzune-genesis" title="The Parasite Doctor Suzune: Genesis">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-parasite-doctor-suzune-genesis-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             The Parasite Doctor Suzune: Genesis
-            </span>
-            <span class="list-top-movie-item-en">
-             The Parasite Doctor Suzune: Genesis
+             How the Universe Works (Season 5)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1865,21 +1821,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngoi-truong-bi-an" title="Ngôi Trường Bí Ẩn">
+          <a class="list-top-movie-link" href="/phim-moi/hinh-bong-cua-toi" title="Hình Bóng Của Tôi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-truong-bi-an-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hinh-bong-cua-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngôi Trường Bí Ẩn
+             Hình Bóng Của Tôi
             </span>
             <span class="list-top-movie-item-en">
-             Homeschool
+             Reflection of You
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tan-tieu-ngu-nghia" title="Tân Tiểu Ngũ Nghĩa">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-tieu-ngu-nghia-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tân Tiểu Ngũ Nghĩa
+            </span>
+            <span class="list-top-movie-item-en">
+             Tân Tiểu Ngũ Nghĩa
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/poli-va-cac-ban-phan-4" title="Poli và các bạn (Phần 4)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/poli-va-cac-ban-phan-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Poli và các bạn (Phần 4)
+            </span>
+            <span class="list-top-movie-item-en">
+             Robocar Poli (Season 4)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
